<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_orange_light">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/returnButtonPrompt"
        android:id="@+id/returnButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/RedButton"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultPrompt"
        android:id="@+id/sumTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="154dp"
        android:textSize="30sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/sumEditText"
        android:layout_below="@+id/sumTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/productButtonPrompt"
        android:id="@+id/productButton"
        android:layout_above="@+id/returnButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/GreenButton"/>
</RelativeLayout>