<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:background="@android:color/holo_blue_light">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resetButtonPrompt"
        android:id="@+id/resetButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/RedButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addButtonPrompt"
        android:id="@+id/addButton"
        android:layout_above="@+id/resetButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/GreenButton"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstNumberPrompt"
        android:id="@+id/firstNumberTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="98dp"
        android:textSize="30sp"
        android:background="#fffff96f"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/firstNumberEditText"
        android:layout_below="@+id/firstNumberTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondNumberPrompt"
        android:id="@+id/secondNumberTextView"
        android:layout_below="@+id/firstNumberEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp"
        android:background="#fffff96f"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/secondNumberEditText"
        android:layout_below="@+id/secondNumberTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"/>

</RelativeLayout>
